Fixed letterspacing.

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -58,6 +58,7 @@
 
 	font-family: inherit;
 	font-family: inherit;
+	letter-spacing: inherit;
 }
 html {
 
